<resources>
    <string name="app_name">2048</string>
    <string name="play">Play</string>
    <string name="highscores">Highscores</string>
    <string name="exit">Exit</string>
    <string name="new_game">New Game</string>
    <string name="blue_theme">Blue</string>
    <string name="violet_theme">Violet</string>
    <string name="green_theme">Green</string>
    <string name="red_theme">Red</string>
    <string name="theme">Theme</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2048">2048</string>
    <string name="_2048icon">2048Icon</string>
</resources>
