<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tristanglaes.a2048.ThemeActivity">

    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:background="#37474F"
        android:checkedButton="@+id/blue_theme">

        <RadioButton
            android:id="@+id/blue_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/b8"
            android:text="@string/blue_theme"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="36sp"
            android:layout_margin="20dp"
            android:layout_marginVertical="10dp"
            android:buttonTint="@color/common_google_signin_btn_text_dark_focused"
            />


        <RadioButton

            android:id="@+id/black_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/v8"
            android:text="@string/violet_theme"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="36sp"
            android:layout_margin="20dp"
            android:layout_marginVertical="10dp"
            android:buttonTint="@color/common_google_signin_btn_text_dark_focused"/>

        <RadioButton

            android:id="@+id/green_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/g8"
            android:text="@string/green_theme"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="36sp"
            android:layout_margin="20dp"
            android:layout_marginVertical="10dp"
            android:buttonTint="@color/common_google_signin_btn_text_dark_focused"/>

        <RadioButton

            android:id="@+id/red_theme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/r8"
            android:text="@string/red_theme"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="36sp"
            android:layout_margin="20dp"
            android:layout_marginVertical="10dp"
            android:buttonTint="@color/common_google_signin_btn_text_dark_focused"/>

    </RadioGroup>


</RelativeLayout>
